# HUPX_price_forecasting

./: .gitignore  Compare_Optuna.ipynb  backcast.ipynb  catboost_Optuna.ipynb  lightm_optuna.ipynb  main.py  proc_data.ipynb  pyproject.toml  run_catboost.sh  run_dnn.sh  run_lgbm.sh  run_rf.sh  run_xgboost.sh  runs_paralel.py  statistic_analize.ipynb  t_test_SARIMAX.ipynb  t_test_catboost.ipynb  t_test_lightgdm.ipynb  t_test_naive.ipynb  t_test_nn.ipynb  t_test_pipeline.py  t_test_rf.ipynb  t_test_xgboost.ipynb  xgboost_optuna.ipynb
Entso_e/DA_price/: GUI_ENERGY_PRICES_202212312300-202312312300.csv  GUI_ENERGY_PRICES_202309152200-202309162200.csv  GUI_ENERGY_PRICES_202312312300-202412312300.csv  GUI_ENERGY_PRICES_202412312300-202512312300.csv  GUI_ENERGY_PRICES_202512312300-202612312300.csv
Entso_e/GenerationFC/: GUI_TOTAL_GENERATION_FORECAST_202412312300-202512312300.csv  GUI_TOTAL_GENERATION_FORECAST_202512312300-202612312300.csv
Entso_e/Load/: GUI_TOTAL_LOAD_DAYAHEAD_202512312300-202612312300.csv
Entso_e/RenewableForecast_solar/: GUI_WIND_SOLAR_GENERATION_FORECAST_SOLAR_202512312300-202612312300.csv
Entso_e/RenewablesForecast_wind/: GUI_WIND_SOLAR_GENERATION_FORECAST_ONSHORE_202412312300-202512312300.csv  (+1 more)
Optune_simulation_env/: __init__.py  dnn_model.py  optuna_simulations.py
out_shap/: shap_global_CatBoost.csv  shap_global_LigthGBM_model.csv  shap_global_XGB_model.csv
outputs/: catboost_intra_mae.npy  catboost_lgbm_mae.npy  catboost_real_mae.npy  rf_intra_mae.npy  rf_lgbm_mae.npy  rf_lgbm_rmse.npy  rf_real_mae.npy
utils/: utils.py
(+1669 files in other folders)
