[project]
name = "hupx-price-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "shutup>=0.3.0",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]
